welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: value unary_! is not a member of plm.universe.Direction
while (!estFaceMur() && !getDirection()==Direction.NORTH)
                        ^