welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
while (!estFaceMur() && !getDirection()==Direction.NORTH)
		{
if (!estFaceMur)
{
	avance();
}
else 
	{
	gauche();
	avance();
	droite();
	}
		}
			    }
